<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvPreparacion"
        android:layout_width="284dp"
        android:layout_height="89dp"
        android:layout_marginTop="376dp"
        android:background="@drawable/bordered_text_bg"
        android:hint="Nombre"
        android:text="Preparacion"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSiguienteR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Ingredientes"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvIngredientes"
        app:layout_constraintEnd_toEndOf="@+id/tvIngredientes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvIngredientes" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Fecha de creación"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvCreacion"
        app:layout_constraintEnd_toEndOf="@+id/tvCreacion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvCreacion" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="279dp"
        android:layout_height="32dp"
        android:layout_marginBottom="304dp"
        android:background="@drawable/bordered_text_bg"
        android:hint="Nombre"
        android:text="Nombre"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvPreparacion"
        app:layout_constraintEnd_toEndOf="@+id/tvPreparacion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvPreparacion" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Nombre"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvNombre"
        app:layout_constraintEnd_toEndOf="@+id/tvNombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Precio"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvCalorias"
        app:layout_constraintEnd_toEndOf="@+id/tvCalorias"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvCalorias" />

    <TextView
        android:id="@+id/tvFacil"
        android:layout_width="97dp"
        android:layout_height="30dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/bordered_text_bg"
        android:hint="Si/No"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvIngredientes"
        app:layout_constraintEnd_toEndOf="@+id/tvIngredientes"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvIngredientes" />

    <TextView
        android:id="@+id/tvCalorias"
        android:layout_width="97dp"
        android:layout_height="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/bordered_text_bg"
        android:hint="@string/precio"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvFacil"
        app:layout_constraintEnd_toEndOf="@+id/tvFacil"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toEndOf="@+id/tvPorciones" />

    <Button
        android:id="@+id/btnSiguienteR"
        android:layout_width="164dp"
        android:layout_height="43dp"
        android:layout_marginBottom="100dp"
        android:background="@color/teal_700"
        android:text="Siguiente coctel ->"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvPreparacion"
        app:layout_constraintStart_toStartOf="@+id/tvPreparacion" />

    <TextView
        android:id="@+id/tvPorciones"
        android:layout_width="97dp"
        android:layout_height="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/bordered_text_bg"
        android:hint="@string/contenido"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCreacion"
        app:layout_constraintEnd_toEndOf="@+id/tvCreacion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvCreacion" />

    <TextView
        android:id="@+id/tvCreacion"
        android:layout_width="126dp"
        android:layout_height="30dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/bordered_text_bg"
        android:hint="Nombre"
        android:text="Fecha creacion"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvIngredientes"
        app:layout_constraintEnd_toStartOf="@+id/tvFacil"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvIngredientes" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/contenido"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvPorciones"
        app:layout_constraintEnd_toEndOf="@+id/tvPorciones"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvPorciones" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/tieneAlcohol"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvFacil"
        app:layout_constraintEnd_toEndOf="@+id/tvFacil"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvFacil" />

    <TextView
        android:id="@+id/tvIngredientes"
        android:layout_width="279dp"
        android:layout_height="32dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/bordered_text_bg"
        android:hint="Nombre"
        android:text="Ingredientes"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvPreparacion"
        app:layout_constraintEnd_toEndOf="@+id/tvPreparacion"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/tvPreparacion" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Preparación"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvPreparacion"
        app:layout_constraintEnd_toEndOf="@+id/tvPreparacion"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="@+id/tvPreparacion" />

</androidx.constraintlayout.widget.ConstraintLayout>